[gd_scene load_steps=5 format=2]

[ext_resource path="res://Star/Star.gd" type="Script" id=1]
[ext_resource path="res://Star/sun.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 448.0

[sub_resource type="Animation" id=2]
resource_name = "flashing"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sun:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.8, 1.8, 1.8, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Star" type="Node2D"]
script = ExtResource( 1 )

[node name="Sun" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GrowTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flashing = SubResource( 2 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
